--- a/frontend/login.html
+++ b/frontend/login.html
@@ -136,8 +136,8 @@
       }
 
       const poolData = {
-        UserPoolId: 'us-east-1_vaCGrHdNP',
-        ClientId: '6bg7sp0qr72fb23cvgto16fqqq'
+        UserPoolId: 'us-east-1_ABCDEF123',
+        ClientId: '4ijklmn56opqrstu7vwx89yzab'
       };
       const userPool = new AmazonCognitoIdentity.CognitoUserPool(poolData);
       let cognitoUser = null;
