--- a/frontend/login.html
+++ b/frontend/login.html
@@ -136,8 +136,8 @@
       }
 
       const poolData = {
-        UserPoolId: 'us-east-1_ABCDEF123',
-        ClientId: '4ijklmn56opqrstu7vwx89yzab'
+        UserPoolId: 'COGNITO_USER_POOL_ID',       // ← your User Pool ID
+        ClientId:   'COGNITO_APP_CLIENT_ID' // ← your App Client ID
       };
       const userPool = new AmazonCognitoIdentity.CognitoUserPool(poolData);
       let cognitoUser = null;
